<resources>
    <string name="app_name">看我</string>
    <string name="selectCamera">选择相机</string>
    <string name="frontCamera">前置相机</string>
    <string name="rearCamera">后置相机</string>
    <string name="takePictureText">人脸采集</string>
    <string name="dialogTitle">查验结果</string>
    <string name="dialogImageIdText">图片编号:</string>
    <string name="dialoglimitText">对比人数:</string>
    <string name="dialogCancelText">取消</string>
    <string name="dialogConfirmText">关闭窗口</string>
    <string name="listNameText">姓名: </string>
    <string name="listSexText">性别: </string>
    <string name="listNationText">民族: </string>
    <string name="listSimilarityText">相似度: </string>

    <string name="verificationResultText">对比结果: </string>
    <string name="verificationTimeText">对比时间: </string>
    <string name="verificationTotalText">比中数: </string>
    <string name="verificationSimilarityText">相似度: </string>
    <string name="verificationNameText">姓名: </string>
    <string name="verificationSexText">性别: </string>
    <string name="verificationNationText">民族: </string>
    <string name="verificationNoteText">备注: </string>

    <string name="verificationTrue"> 通过 </string>
    <string name="verificationFalse">失败 </string>

    <!--权限-->
    <string name="cameraPermissions">android.permission.CAMERA</string>
    <string name="storePermissions">android.permission.READ_EXTERNAL_STORAGE</string>


    <!--测试-->
    <string name="dialogImageId">1101081542181099923</string>
    <string name="dialoglimit">3</string>
    <string name="dialogErrorMsg">失败，无效的Json数据</string>


</resources>
