<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center_vertical"
    >

    <ImageView
        android:id="@+id/iv_faceImage_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        />
    <TextView
        android:id="@+id/tv_nameText_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listNameText"
        android:layout_toRightOf="@id/iv_faceImage_listView"
        android:layout_marginLeft="5dp"
        android:textSize="@dimen/text_size"
        />
    <TextView
        android:id="@+id/tv_name_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="张三"
        android:layout_toRightOf="@id/tv_nameText_listView"
        android:textSize="@dimen/text_size"
        android:layout_marginLeft="2dp"
        />
    <TextView
        android:id="@+id/tv_sexText_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listSexText"
        android:layout_toRightOf="@id/tv_name_listView"
        android:layout_marginLeft="15dp"
        android:textSize="@dimen/text_size"
        />
    <TextView
        android:id="@+id/tv_sex_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="男"
        android:layout_toRightOf="@id/tv_sexText_listView"
        android:textSize="@dimen/text_size"
        android:layout_marginLeft="2dp"
        />
    <TextView
        android:id="@+id/tv_nationText_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listSexText"
        android:layout_toRightOf="@id/tv_sex_listView"
        android:layout_marginLeft="15dp"
        android:textSize="@dimen/text_size"
        />
    <TextView
        android:id="@+id/tv_nation_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="汉"
        android:layout_toRightOf="@id/tv_nationText_listView"
        android:textSize="@dimen/text_size"
        android:layout_marginLeft="2dp"
        />
    <TextView
        android:id="@+id/tv_similarityText_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listSimilarityText"
        android:layout_below="@id/tv_nameText_listView"
        android:layout_toRightOf="@id/iv_faceImage_listView"
        android:layout_marginLeft="5dp"
        android:textSize="@dimen/text_size"
        />
    <TextView
        android:id="@+id/tv_similarity_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:layout_toRightOf="@id/tv_similarityText_listView"
        android:layout_below="@id/tv_name_listView"
        android:textSize="@dimen/text_size"
        android:layout_marginLeft="2dp"
        />

    <ImageView
        android:id="@+id/iv_toDetails_listView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        />
</RelativeLayout>